--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 <br>
 <br>
 <footer>
-Let's stay in touch!
+<!--Let's stay in touch!
 <br>
 <a class="footer-links">
-	<a href="mailto:ninmcdani@gmail.com">ninmcdani@gmail.com</a> | <a href="mailto:nsmcdani@umich.edu">nsmcdani@umich.edu</a>| <a href="https://www.linkedin.com/in/nina-mcdaniel-b288699a">LinkedIn</a> 
+	<a href="mailto:ninmcdani@gmail.com">ninmcdani@gmail.com</a> | <a href="mailto:nsmcdani@umich.edu">nsmcdani@umich.edu</a>| <a href="https://www.linkedin.com/in/nina-mcdaniel-b288699a/">LinkedIn</a>-->
 <br>
 Nina McDaniel &copy; 2020
 </footer>
