--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 	<title>Resume</title>
 	<link rel="icon" type="image/png" href="images/light-bulb.png">
 	<!--<link rel="icon" type="image/png" href="images/light-bulb.png">-->
-	<link rel="stylesheet" href="css/html5reset.css">
+	<!--<link rel="stylesheet" href="css/html5reset.css">-->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
