--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina McDaniel</title>
 	<link rel="icon" type="image/png" href="images/light-bulb.png">
-	<!--<link rel="icon" type="image/png" href="images/light-bulb.png">-->
-	<!--<link rel="stylesheet" href="css/html5reset.css">-->
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1YG9N1FTHJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1YG9N1FTHJ');
+</script>
 </head>
 <body>
 	<a class = "skip" href="#skip">Skip to Main Content</a>
@@ -15,10 +22,11 @@
 	<!--<img src="images/logo.png" alt="logo" id="logo" height="50" width="50">-->
 		<h1>Nina McDaniel</h1> 
 	<nav>
-		<ul class="nav_links">
-			<li class="nav_item" class="current"><a href="index.html"> Work</a></li>
-			<li class="nav_item"><a href="about.html"> About</a></li>
-	    	<li class="nav_item"><a href="resume.html"> Resume</a></li>
+		<ul>
+			<li><a href="index.html" class="active_page"> Work</a></li>
+			<li><a href="about.html"> About</a></li>
+	    	<li><a href="resume.html"> Resume</a></li>
+	    	<li><a href="fav-things.html"> My Favorite Things</a></li>
 		  
 		</ul>
 	</nav>
@@ -28,10 +36,27 @@
 <main class="heading2" id="skip" tabindex="0">
 	<h2> Hi! I am an upcoming UX Designer from Detroit with a passion for problem solving</h2>
 
-<div class="work">
-	<img id="image1" src="images/goldfish.jpg" alt="Tea Shop Site Redesign"/>
-	<img id="image2" src="images/heart_home.jpg" alt="Affordable Housing App"/>
-	<img id="image3" src="images/affinity_wall.jpg" alt="Nonprofit UX Consulting"/>
+<div id="work_flex">
+	<div class= "work">
+		<img id="image1" src="images/goldfish.jpg" alt="Tea Shop Site Redesign">
+		<div class="overlay">
+			<div class="overlay-text">Goldfish Tea Site Redesign</div>
+		</div>
+	</div>
+
+    <div class="work">
+    	<img id="image2" src="images/heart_home.jpg" alt="Affordable Housing App">
+    	<div class="overlay">
+    		<div class="overlay-text">Education Tool for Detroit Property Buyers</div>
+    	</div>
+    </div>
+
+    <div class="work">
+    	<img id="image3" src="images/affinity_wall.jpg" alt="Nonprofit UX Consulting"/>
+    	<div class="overlay">
+    		<div class="overlay-text">NonProfit Consulting</div>
+		</div>
+	</div>
 
 </div>
 
@@ -41,10 +66,13 @@
 <br>
 <br>
 <footer>
-<!--Let's stay in touch!
+Let's stay in touch!
 <br>
-<a class="footer-links">
-	<a href="mailto:ninmcdani@gmail.com">ninmcdani@gmail.com</a> | <a href="mailto:nsmcdani@umich.edu">nsmcdani@umich.edu</a>| <a href="https://www.linkedin.com/in/nina-mcdaniel-b288699a/">LinkedIn</a>-->
+
+
+
+<a href="mailto:ninmcdani@gmail.com">ninmcdani@gmail.com</a> | <a href="mailto:nsmcdani@umich.edu">nsmcdani@umich.edu</a>| <a href="https://www.linkedin.com/in/nina-mcdaniel-b288699a">LinkedIn</a>
+<br>
 <br>
 Nina McDaniel &copy; 2020
 </footer>
