--- a/resume.html
+++ b/resume.html
@@ -8,16 +8,26 @@
 	<!--<link rel="icon" type="image/png" href="images/light-bulb.png">-->
 	<!--<link rel="stylesheet" href="css/html5reset.css">-->
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1YG9N1FTHJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1YG9N1FTHJ');
+</script>
 </head>
 <body>
 	<a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
 	<h1>Nina McDaniel</h1> 
 	<nav>
-		<ul class="nav_links">
-			<li class="nav_item"><a href="index.html"> Work</a></li>
-			<li class="nav_item"><a href="about.html"> About</a></li>
-	    	<li class="nav_item"><a href="resume.html"> Resume</a></li>
+		<ul>
+			<li><a href="index.html"> Work</a></li>
+			<li><a href="about.html"> About</a></li>
+	    	<li><a href="resume.html" class="active_page"> Resume</a></li>
+	    	<li><a href="fav-things.html"> My Favorite Things</a></li>
 		  
 		</ul>
 	</nav>
@@ -26,6 +36,13 @@
 <div class="resume" id="skip" tabindex="0">
 	<img src="images/resume.png" alt="Resume" id="resume">
 
+</div>
+<div class="square">
+	<img src="images/square.png" alt="Blank white square">
+</div>
+
+
+
 
 
 
@@ -33,10 +50,10 @@
 <br>
 <br>
 <footer>
-<!--Let's stay in touch!
+Let's stay in touch!
 <br>
-<a class="footer-links">
-	<a href="mailto:ninmcdani@gmail.com">ninmcdani@gmail.com</a> | <a href="mailto:nsmcdani@umich.edu">nsmcdani@umich.edu</a>| <a href="https://www.linkedin.com/in/nina-mcdaniel-b288699a/">LinkedIn</a>-->
+
+<a href="mailto:ninmcdani@gmail.com">ninmcdani@gmail.com</a> | <a href="mailto:nsmcdani@umich.edu">nsmcdani@umich.edu</a>| <a href="https://www.linkedin.com/in/nina-mcdaniel-b288699a">LinkedIn</a>
 <br>
 <br>
 Nina McDaniel &copy; 2020
