--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </div>
     <div class="flip-card-back">
       <h1>I like to...</h1> 
-      <p>Play with my cat Daria</p> 
+      <p>Play with my cats</p> 
       <p>Go on walks</p>
       <p>Watch movies</p>
     </div>
